# UnityMCP

./: .coverage  .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
tests/: test_client.py
unity_mcp_client/: __init__.py  client.py
