[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-client"
version = "0.2.0"
description = "Python client for Unity MCP server"
readme = "README.md"
authors = [{ name = "Luiz Hemerly", email = "lechemerly@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["requests"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/lhemerly/UnityMCP"
Repository = "https://github.com/lhemerly/UnityMCP"
